--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,11 @@ h1 {
   color: $primary-color;
   background-color: $bg;
 }
+h1 {
+  color: $primary-color;
+  background-color: $bg;
+}
+h1 {
+  color: $primary-color;
+  background-color: $bg;
+}
