--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,1 @@
-$primary-color: white;
-$bg: black;
-h1 {
-  color: $primary-color;
-  background-color: $bg;
-}
-h1 {
-  color: $primary-color;
-  background-color: $bg;
-}
-h1 {
-  color: $primary-color;
-  background-color: $bg;
-}
+@import './scss/index.scss'
