--- a/src/scss/theme/__grid.scss
+++ b/src/scss/theme/__grid.scss
@@ -1,3 +1,8 @@
+.container{
+    margin-left: auto;
+    margin-right: auto;
+}
+
 @media (min-width: 576px){
     .container {
         max-width: 540px;
